...
        titleLabel.textColor = .white
        titleLabel.textAlignment = .center
        titleLabel.font = UIFont.systemFont(ofSize: 28, weight: .semibold)
        view.addSubview(titleLabel)

        textField = UITextField()
        textField.attributedPlaceholder = NSAttributedString(string: "Enter the game code",
                attributes: [NSAttributedString.Key.foregroundColor: UIColor(hex: 0x9e9e9e)])
        textField.textColor = .white
        textField.font = UIFont.systemFont(ofSize: 30, weight: .medium)
        textField.textAlignment = .center
        textField.keyboardType = .numberPad
        textField.addTarget(self, action: #selector(textFieldDidChange), for: .editingChanged)
...
